fixed layout issues

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -36,7 +36,7 @@
     width: 100%;
     height: var(--footer-height);
     display: flex;
-    align-items: center;
+    align-items: end;
     
   }
   
